# mogu-mogu-backend

./: .env.example  Makefile  README.md  pyproject.toml
.github/workflows/: dev_build.yml.disabled  tests.yml.disabled
alembic/versions/: 20250929_1500_initial_migration_with_kakao_login_abc123def456.py  20250929_2219_rename_user_account_to_app_user_and__2045a2f45e4a.py  20250929_2246_change_user_id_from_uuid_to_string_09af81d145b9.py  20251001_1026_add_nickname_and_profile_image_url_to__b5ace4cae445.py  20251001_1444_add_onboarding_fields_and_user_status_d1984a6691f7.py  20251001_1450_enable_postgis_for_wish_spots_2cf693fb8e85.py  20251001_1451_migrate_wish_spots_to_postgis_3c0a75ee406e.py  20251002_1938_add_mogu_post_and_related_tables_2d8cbe92aff2.py  20251003_1159_add_wish_times_favorites_and_rating__51c740e272f3.py  20251003_1359_add_rating_keyword_type_enum_simple_1e306a85a103.py  20251005_2142_remove_userkeywordstats_table_use_real__e6576188d588.py  20251006_0059_add_labor_fee_to_mogu_post_68ef1f9d0cce.py  20251007_0031_rename_image_url_to_image_path_in_mogu__d05d5589df17.py  20251007_1129_replace_question_answer_with_mogu__0833c664cbb3.py  20251010_0045_add_ai_recommendation_tables_8c59ce7f31e7.py
app/: enums.py  main.py  models.py
app/api/: api_messages.py  api_router.py  deps.py
app/core/: config.py  logging_middleware.py  supabase.py
app/schemas/: requests.py  responses.py  types.py
app/tests/: conftest.py  (+1 more)
docs/: api-refactoring-guide.md  api.md  dbdiagram-erd  deployment.md  development.md  setup.md
scripts/: analyze_item_diversity.py  batch_build_item_item_sim.py  generate_dummy_data.py  insert_dummy_data.py  item_diversity_report.txt  mogumogu_report.pptx  setup_dummy_data.sh  visualize_dummy_data.py
static/: index.html  user.html
(+27 files in other folders)
